Styling fix for about section, added whitespace

--- a/css/03-partials/section-about-coronacheck.scss
+++ b/css/03-partials/section-about-coronacheck.scss
@@ -16,6 +16,8 @@
 
   @media (min-width: 740px) {
     flex: 0 1 50%;
+    padding: 60px 80px 60px 30px;
+    justify-content: flex-end;
   }
 
   .about__image {
@@ -32,7 +34,7 @@
   align-content: flex-start;
 
   @media (min-width: 740px) {
-    padding-top: 30px;
+    padding: 60px 30px;
     flex: 0 1 50%;
     margin-left: 0;
   }
